--- a/.env
+++ b/.env
@@ -32,7 +32,7 @@ MAIL_DRIVER=smtp
 MAIL_HOST=smtp.office365.com
 MAIL_PORT=587
 MAIL_USERNAME=test@mastersoft.com.ar
-MAIL_PASSWORD=Ms123456
+MAIL_PASSWORD=
 MAIL_FROM_ADDRESS=test@mastersoft.com.ar
 MAIL_FROM_NAME=test
 MAIL_ENCRYPTION=tls
@@ -53,7 +53,7 @@ MAIL_ENCRYPTION=tls
 # MAIL_HOST=arrpeap26.nwsn.local
 # MAIL_PORT=25
 # MAIL_USERNAME=scanner
-# MAIL_PASSWORD=scanner
+# MAIL_PASSWORD=
 # MAIL_FROM_ADDRESS=scanner@newsan.com.ar
 # MAIL_FROM_NAME=NewsanStock
 # MAIL_ENCRYPTION=null
