--- a/- copia.env
+++ b/- copia.env
@@ -53,7 +53,7 @@ MAIL_ENCRYPTION=tls
 # MAIL_HOST=arrpeap26.nwsn.local
 # MAIL_PORT=25
 # MAIL_USERNAME=scanner
-# MAIL_PASSWORD=scanner
+# MAIL_PASSWORD=
 # MAIL_FROM_ADDRESS=scanner@newsan.com.ar
 # MAIL_FROM_NAME=NewsanStock
 # MAIL_ENCRYPTION=null
