--- a/.env
+++ b/.env
@@ -29,11 +29,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.office365.com
-MAIL_PORT=587
-MAIL_USERNAME=test@mastersoft.com.ar
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USERNAME=
 MAIL_PASSWORD=
-MAIL_FROM_ADDRESS=test@mastersoft.com.ar
+MAIL_FROM_ADDRESS=
 MAIL_FROM_NAME=test
 MAIL_ENCRYPTION=tls
 
