--- a/- copia.env
+++ b/- copia.env
@@ -42,29 +42,29 @@ MAIL_ENCRYPTION=tls
 # MAIL_DRIVER=smtp
 # MAIL_HOST=smtp.mailtrap.io
 # MAIL_PORT=2525
-# MAIL_USERNAME=938b1375db1d64
-# MAIL_PASSWORD=6953985ef0a84b
-# MAIL_FROM_ADDRESS=notificacion@newsan.com.ar
+# MAIL_USERNAME=
+# MAIL_PASSWORD=
+# MAIL_FROM_ADDRESS=
 # MAIL_FROM_NAME=NewsanStock
 # MAIL_ENCRYPTION=null
 
 
 # MAIL_DRIVER=smtp
-# MAIL_HOST=arrpeap26.nwsn.local
+# MAIL_HOST=
 # MAIL_PORT=25
 # MAIL_USERNAME=scanner
 # MAIL_PASSWORD=
-# MAIL_FROM_ADDRESS=scanner@newsan.com.ar
-# MAIL_FROM_NAME=NewsanStock
+# MAIL_FROM_ADDRESS=
+# MAIL_FROM_NAME=
 # MAIL_ENCRYPTION=null
 
 # MAIL_DRIVER=smtp
-# MAIL_HOST=10.10.10.195
+# MAIL_HOST=
 # MAIL_PORT=25
-# MAIL_USERNAME=enns@newsan.com.ar
+# MAIL_USERNAME=
 # MAIL_PASSWORD=
-# MAIL_FROM_ADDRESS=enns@newsan.com.ar
-# MAIL_FROM_NAME=enns
+# MAIL_FROM_ADDRESS=
+# MAIL_FROM_NAME=
 # MAIL_ENCRYPTION=null
 
 
