--- a/.env
+++ b/.env
@@ -42,10 +42,10 @@ MAIL_ENCRYPTION=tls
 # MAIL_DRIVER=smtp
 # MAIL_HOST=smtp.mailtrap.io
 # MAIL_PORT=2525
-# MAIL_USERNAME=938b1375db1d64
-# MAIL_PASSWORD=6953985ef0a84b
+# MAIL_USERNAME=
+# MAIL_PASSWORD=
 # MAIL_FROM_ADDRESS=
-# MAIL_FROM_NAME=NewsanStock
+# MAIL_FROM_NAME=
 # MAIL_ENCRYPTION=null
 
 
