--- a/.env
+++ b/.env
@@ -52,10 +52,10 @@ MAIL_ENCRYPTION=tls
 # MAIL_DRIVER=smtp
 # MAIL_HOST=
 # MAIL_PORT=25
-# MAIL_USERNAME=scanner
+# MAIL_USERNAME=
 # MAIL_PASSWORD=
 # MAIL_FROM_ADDRESS=
-# MAIL_FROM_NAME=NewsanStock
+# MAIL_FROM_NAME=
 # MAIL_ENCRYPTION=null
 
 # MAIL_DRIVER=smtp
